--- a/About Me.html
+++ b/About Me.html
@@ -212,8 +212,8 @@
         </div>
 
         <div class="interactive-buttons">
-            <a href="https://aboutme.example.com/diplomas.html" class="button" id="diplomasBtn">Diplomas</a>
-            <a href="https://aboutme.example.com/certifications.html" class="button" id="certificationsBtn">Certifications</a>
+            <a href="https://mohamedayoub97.github.io/About-Me-website/My Certifications.html" class="button" id="diplomasBtn">Diplomas</a>
+            <a href="https://mohamedayoub97.github.io/About-Me-website/My Diplomas.html" class="button" id="certificationsBtn">Certifications</a>
         </div>
 
         <div class="copyright">
