--- a/About Me.html
+++ b/About Me.html
@@ -214,6 +214,7 @@
         <div class="interactive-buttons">
             <a href="https://mohamedayoub97.github.io/About-Me-website/My Diplomas.html" class="button" id="certificationsBtn">Diplomas</a>
             <a href="https://mohamedayoub97.github.io/About-Me-website/My Certifications.html" class="button" id="diplomasBtn">Certifications</a>
+            <a href="https://mohamedayoub97.github.io/About-Me-website/My CV.html" class="button" id="certificationsBtn">My CV</a>
         </div>
 
         <div class="copyright">
