--- a/My Cv.html
+++ b/My Cv.html
@@ -439,10 +439,9 @@
 
         <!-- Download CV -->
         <div class="download-cv fade-in">
-            <a href="C:\Users\moham\OneDrive\Desktop\PFE\ayoub\CV MAE.pdf"" target="_blank">Download My CV</a>
-        </div>
-        <div class="back-button">
+            <a href="CV MAE.pdf"" target="_blank">Download My CV</a>
             <a href="https://mohamedayoub97.github.io/About-Me-website/About Me.html" class="button">Back to About Me</a>
+        </div>
     </div>
 
     <!-- Footer -->
