--- a/About Me.html
+++ b/About Me.html
@@ -188,7 +188,7 @@
             <p>A brief introduction to who I am and what I do</p>
         </div>
         <div class="about-me">
-            <img src="https://www.mediafire.com/view/mrbyxu5oaibju43/Med_ayoub.png/file" alt="Mohamed Ayoub Essalami" width="200" height="200">
+            <img src="Med ayoub.png" alt="Mohamed Ayoub Essalami" width="200" height="200">
             <div class="about-me-text">
                 <h2>Hello, I'm Mohamed Ayoub Essalami! 😊</h2>
                 <p>I'm a 27-year-old Tunisian engineering student advancing to my third year. I completed my Bachelor's in Fundamental Physics as the top student and continued to excel in my Master's in Innovative Materials and Energy Management, where I also ranked first. My research focuses on perovskites for magnetic refrigeration and the development of efficient solar cells. I am skilled in simulations using COMSOL and ANSYS and have strong coding abilities in Python and MATLAB, which I use to model physical systems, analyze data, and drive my passion for innovative energy solutions and sustainable technologies.</p>
