Change favicon format from PNG to JPEG

--- a/About Me.html
+++ b/About Me.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Mohamed Ayoub Essalami</title>
-    <link rel="icon" type="image/png" href="portfolio.png">
+    <link rel="icon" type="image/jpeg" href="portfolio.jpg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <style>
