--- a/About Me.html
+++ b/About Me.html
@@ -1,4 +1,7 @@
-<html><head><base href="https://aboutme.example.com">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <base href="https://aboutme.example.com/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Mohamed Ayoub Essalami</title>
